--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
 </head>
 <body class="schematic-bg">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
